# GitRelic

./: README.md  pyproject.toml
gitrelic/: __init__.py  cli.py  collaboration.py  git_data.py  metrics.py  ownership.py  renderer.py  replay.py  todo_tracker.py  zombie.py
gitrelic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
